# movie-ticket-system/user-service/src/routes/user.routes.js
@@ -3,18 +3,24 @@ const express = require("express")
 const router = express.Router()
 
 const userController = require("../controllers/user.controller")
-
 const auth = require("../middleware/auth.middleware")
 
 
+// authentication
 router.post("/register", userController.register)
-
 router.post("/login", userController.login)
 
-router.get("/profile", auth, userController.getUser)
 
+// profile routes
+router.get("/profile", auth, userController.getProfile)
 router.put("/profile", auth, userController.updateProfile)
+router.delete("/profile", auth, userController.deleteProfile)
 
-router.delete("/profile", auth, userController.deleteUser)
+
+// admin routes
+router.get("/", userController.getAllUsers)
+router.get("/:id", userController.getUserById)
+router.put("/:id", userController.updateUserById)
+router.delete("/:id", userController.deleteUserById)
 
 module.exports = router
